- Add exception handling. - Extract the single service into single logic services. - Fix history endpoint to accept start and end date
